# axon

./: .clangd  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  pyproject.toml
axon/: inspector.cpp
axon/base/: base.cpp  dcheck.h  index_base.cpp  macros.h  mod.cpp  storage.cpp
axon/core/: autodiff.cpp  backward_rules.cpp  context.cpp  core.cpp  data_type.cpp  eager.cpp  function.cpp  graph.cpp  graph_impl.cpp  ids.cpp  inst.cpp  inst_kinds.cpp  inst_rules.cpp  mod.cpp  module.cpp  scalar.cpp  shape_rules.cpp  storage.cpp  tensor.cpp
axon/core/rules/: backward.cpp  hash.cpp  shape.cpp
axon/mlir/: codegen.cpp  codegen_graph.cpp  codegen_inst.cpp  codegen_module.cpp  compilation_context.cpp  context.cpp  forward.cpp  lowering.cpp  mlir.cpp  mod.cpp
axon/mlir/dialect/: canonicalization.cpp  dialect.cpp  dialect.h  dialect.td  ops.cpp  types.cpp
axon/mlir/lowering/: llvm.cpp  standard.cpp
axon/mlir/passes/: llvm.cpp  mod.cpp  standard.cpp
axon/python/: abi.cpp  bindings.cpp  compilation_unit.cpp  context.cpp  jit.cpp  mod.cpp  python.cpp  runtime.cpp  storage.cpp  tensor.cpp  tensor_impl.cpp  tensor_ops.cpp  trace_session.cpp
axon/python/axon/: __init__.py  _core.pyi  compile.py  compiler.py  graph_manager.py  jit.py  module.py  tensor.py
axon/python/axon/builtin/: __init__.py
axon/python/axon/datasets/: __init__.py  dataset_iterator.py
axon/python/axon/nn/: __init__.py  functional.py  linear.py  module.py
axon/python/axon/optim/: __init__.py
axon/python/axon/runtime/: __init__.py
axon/python/axon/testing/: __init__.py
cmake/: dependencies.cmake  eigen.cmake  nanobind.cmake  xtensor.cmake
examples/: mnist.py  simple_autograd.py
src/: axon.cpp  context.cpp  eager.cpp  graph.cpp  ids.cpp  inspector.cpp  inst.cpp  storage.cpp  tensor.cpp  test.py
src/axon/: __init__.py  axon.cpp  basic_storage.cpp  context.cpp  op.cpp  tensor.cpp
src/base/: base.cpp  index_base.cpp  index_map.cpp  storage.cpp  value_store.cpp
src/core/: core.cpp  eager.cpp  graph.cpp  ids.cpp  inst.cpp  inst_kinds.cpp  inst_rules.cpp  module.cpp
src/cpp/: axon.cpp  basic_storage.cpp  context.cpp  convert.cpp  global_context.cpp  ids.cpp  storage.cpp  tensor.cpp  tensor_metadata.cpp
src/mlir/: codegen.cpp
src/mlir/dialect/: dialect.cpp  dialect.h  dialect.td  ops.cpp  types.cpp
src/python/: bindings.cpp  tensor.cpp
src/python/axon/: __init__.py
tests/: __init__.py  test_axon_function.py  test_axon_version.py  test_context.py  test_tensor.py  test_tensor_mul.py
tests/builtin/: test_cross_entropy.py  test_mse_loss.py
tests/runtime/: test_caching.py  test_graph_merge.py  test_no_grad.py  test_save_tensor.py  test_session_reset_mixed.py
tests/tensor_ops/: test_evaluate.py  test_tensor_accumulate.py  test_tensor_add.py  test_tensor_argmax.py  test_tensor_compare.py  test_tensor_integer.py  test_tensor_log.py  test_tensor_matmul.py  test_tensor_mean.py  test_tensor_mul.py  test_tensor_pow.py  test_tensor_relu.py  test_tensor_repr.py  test_tensor_scalar_mul.py  test_tensor_softmax.py  test_tensor_sub.py  test_tensor_sum.py
tests/tensor_ops/functional/: test_cross_entropy.py  test_mse_loss.py  test_tensor_relu.py  test_tensor_softmax.py
