[project]
name = "axon"
version = "0.1"
dependencies = [
    "numpy>=2.2.6",
    "pytest>=8.4.1",
]

[tool.setuptools]
package-dir = {"" = "axon/python"}
packages = ["axon", "axon.nn"]

[tool.setuptools.package-data]
"*" = ["*.so", "*.pyd", "*.dll", "*.pyi", "py.typed"]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-clarity>=1.0.1",
]
