[project]
name = "axon"
version = "0.1"
dependencies = [
    "pytest>=8.4.1",
]

[tool.setuptools]
package-dir = {"" = "axon/python"}
packages = ["axon", "axon.nn", "axon.testing"]

[tool.setuptools.package-data]
"*" = ["*.so", "*.pyd", "*.dll", "*.pyi", "py.typed"]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "torch>=2.8.0",
]
