[project]
name = "axon"
version = "0.1"

[tool.pytest.ini_options]
pythonpath = [ "axon/python" ]

[tool.setuptools]
package-dir = {"" = "axon/python"}
packages = ["axon", "axon.nn", "axon.testing", "axon.runtime", "axon.datasets", "axon.builtin"]

[tool.setuptools.package-data]
"*" = ["*.so", "*.pyd", "*.dll", "*.pyi", "py.typed"]

[dependency-groups]
dev = [
    "numpy>=2.2.6",
    "pytest>=8.4.1",
    "torch>=2.8.0",
]
